styles/main.css
@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400&display=swap');

/* CSS Reset */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
	/* to fix the way Safari 14+ reads certain Google Fonts incorrectly */
	-webkit-locale: auto;
  	white-space: normal;
}

/* End CSS Reset */
/* Global Styinging */
body {
    background: #bada55;
    font-family: monospace;
    overflow-x: hidden;
}

a {
    color: #a10ebd;
}

h1, h2 {
	/* to fix the way Safari 14+ reads certain Google Fonts property declarations incorrectly */
	font-weight: normal;
}

/* CSS Grid section styling for portfolio.html page. */

section {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
}

/* End CSS Grid section styling for portfolio.html page */

/* image styling */
img {
    display: block;
    height: auto;
    margin: 0 auto;
    max-width: 800px;
	width: 100%;
}

figure {
    border: 1px solid;
    display: block;
    margin: 4rem auto;
    max-width: 800px;
	width: 90%;
}

figcaption {
    margin: 0 auto;
    max-width: 800px;
    padding-bottom: 0.25rem;
    padding-top: 0.25rem;
    text-align: center;
	width: 90%;
    /* point this out to class and toggle it to show effect */
    word-break: break-word;
}

/* End global styling */

/* h1 styling for index.html */
#landing-main-heading {
    margin-top: 0.75rem;
}

/* section styling for index.html */
.landing-section {
    background: linear-gradient(to bottom left, cyan 40%, orange 60%);
    border: 6px double;
    font-family: 'Barlow', sans-serif;
    height: 50vh;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 18vh auto;
    max-width: 600px;
    text-align: center;
	width: 90%;
}

/* End section styling for index.html */

/* article styling for index.html */

.landing-article {
    margin: auto;
    text-align: center;
    width: 100%;
}

.landing-article p {
    font-size: 1.1rem;
    line-height: 1.7;
    margin: 0 auto 1.25rem;
    width: 90%;
}

.landing-article a {
    font-size: 1.5rem;
}

.landing-article a:hover {
    background: #b26ca2;
    border-radius: 3px;
    box-shadow: 0 1px 2px 2px #34686f;
    color: #fff;
    margin: 0 auto;
    padding: 0.75rem;
    width: 5rem;
}

.landing-article a:active {
    background: #b26ca2;
    border-radius: 3px;
    box-shadow: 0 4px 5px 5px #34686f;
    color: #fff;
    margin: 0 auto;
    padding: 0.75rem;
    width: 5rem;
}

/* End article styling for index.html */

/* media query smaller screens for section and article elements in index.html */
@media (max-width: 799px) {
    .landing-section {
        margin: 12vh auto;
        width: 90%;
    }

    .landing-article p {
        margin: 0 auto;
        width: 90%;
    }
}

/* End media query smaller screens for section and article elements in index.html */

/* h1 styling in portfolio.html */
.main-heading {
    margin-bottom: 1.5rem;
    margin-top: 3rem;
    text-align: center;
    width: 97.5%;
}

/* h2 Section heading styling in portfolio.html */
.section-heading {
    background: rgba(104, 151, 187, 0.7);
    border-bottom: 1px solid;
    border-top: 1px solid;
    display: flex;
    justify-content: center;
    margin: 0 auto;
    text-align: center;
    width: 97.5%;
}

/* a element class attribution-link styling in portfolio.html */
.attribution-link {
    color: #0030ff;
}

.attribution-link:hover {
    color: #000;
}

/* End a element class attribution-link styling in portfolio.html */

/* p element caption class styling in portfolio.html - wraps around the entire CC attribution */
p.caption a {
    font-style: italic;
    padding: 0;
    text-align: center;
}

/* End p element caption class styling in portfolio.html - wraps around the entire CC attribution */

/* media query for section element CSS Grid columns in viewport < 799px in portfolio.html */
@media (max-width: 799px) {
    section {
        display: block;
        margin: 0 auto;
        width: 97.5%;
    }
}

/* End media query for section element CSS Grid columns in viewport < 799px in portfolio.html */

/* nav styles using Flexbox (screens greater than 899px) */
/* Logo Styling */
.header {
    margin-top: 2rem;
}

.header .logo {
    font-size: 2.25rem;
    height: 76px;
    letter-spacing: 0.07rem;
    text-align: center;
    text-decoration: none;
    vertical-align: bottom;
    width: 93.44px;
}

/* End Header Logo Styling */

/* nav styles using Flexbox (screens greater than 899px) */
nav {
    /* background: #D6EFFF; */
    background: transparent;
    width: 100vw;
}

ul {
    display: flex;
    justify-content: flex-end;
    margin-bottom: 1.5rem;
    margin-top: -2rem;
}

li {
    font-size: 2.75vh;
    list-style-type: none;
    margin: 0.5vw;
}

a {
    color: black;
    cursor: pointer;
    padding: 2vw;
    text-decoration: none;
}

a:hover {
    color: #800080;
}

.hamburger {
    display: none;
}

/* End nav styles using Flexbox (screens greater than 899px) */

/* media query for site navigation for screens smaller than 900px */
@media (max-width: 899px) {

	.header {
		background: rgba(104, 151, 187, 1);
        margin-top: 0;
		position: sticky;
		top: 0;
		z-index: 99;
    }

    ul {
        /* display: block; */
        flex-direction: column;
        margin-top: 5rem;
    }

    li {
        margin: 0 0 0 1.25rem;
    }

    a {
        display: block;
    }

    /* Responsive Hamburger menu styling */
    .hamburger {
        background-color: transparent;
        /* show the hamburger menu image */
        background-image: url("https://ljc-dev.github.io/testing0/ham.svg");
        background-size: 100%;
        border: none;
        cursor: pointer;
        display: block;
        height: 36px;
        position: fixed;
        right: 20px;
        top: 20px;
        width: 36px;
        /* always keep ham on top of everything */
        z-index: 1000;
    }

    /* change hamburger image to close */
    .showClose {
        background-image: url("https://ljc-dev.github.io/testing0/ham-close.svg");
        background-size: 100%;
    }

    .navbar {
        background: #6897BB;
        height: 100vh;
        left: 0;
        overflow-y: hidden;
        position: fixed;
        top: 0;
        /* hide the menu above the screen by default */
        transform: translateY(-100%);
        /* transition adds a little animation when sliding in and out the menu */
        transition: transform 0.2s ease;
        width: 100vw;
    }

    .showNav {
        /* show the menu */
        transform: translateY(0);
    }
}

/* End media query for site navigation for screens smaller than 900px */

/* Site Footer  Styling */
.site-credits {
    text-align: center;
}

/* Sticky Footer Styling */
html,
body {
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
}

.Site-content {
    flex: 1 0 auto;
}

.site-credits {
    flex-shrink: 0;
    font-size: 1.2rem;
}

/* End Sticky Footer Syling */

